# FairReweighing

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/scut/ImageExp/: Selected_Ratings.csv
docs/: EMSE2025.tex  jair_revision_notes.md  mybib.bib  references_to_add.bib  reviewer_response_matrix.md
result/: Community.csv  Community_Con.csv  Community_Con_Neighbor.csv  Community_DP_Neighbor.csv  Community_Neighbor.csv  German.csv  German_Neighbor.csv  Heart.csv  Insurance.csv  Insurance_Neighbor.csv  LSAC.csv  LSAC_Neighbor.csv  Synthetic.csv  Synthetic_Neighbor.csv  summary.csv
src/: DP_helper.py  data_reader.py  density_balance.py  density_est.py  experiment.py  kde.py  main.py  metrics.py  vgg_face_model.py
