[project]
name = "fairreweighing"
version = "0.1.0"
description = "Density-estimation-based reweighing experiments for fair regression"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "fairlearn==0.9.0",
    "numpy==1.26.0",
    "pandas==2.1.1",
    "scikit-learn==1.3.1",
    "scipy==1.11.3",
    "tensorflow==2.19.1",
]
